--- a/endless_arc/index.html
+++ b/endless_arc/index.html
@@ -7,17 +7,17 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="./index.html">Home</a></li>
-	        	<li><a href="./about.html">About</a></li>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Joseph Straceski</h1>
 				<p>Programmer, Engineer, Actor</p>
-				<p><a href="./endless-arc/index.html">Endless Arc Company</a></p>
-    		</div>
-		</div>
+				<p><a href="./endless-arc">Endless Arc Company</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
 		<footer>
     		<ul>
         		<li><a href="mailto:straceski.joseph@gmail.com">email</a></li>
