--- a/endless_arc/index.html
+++ b/endless_arc/index.html
@@ -4,25 +4,30 @@
 		<title>Joseph Straceski</title>
 		<link rel="stylesheet" type="text/css" href="./css/main.css">
 	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Joseph Straceski</h1>
-				<p>Programmer, Engineer, Actor</p>
-				<p><a href="./endless-arc">Endless Arc Company</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:straceski.joseph@gmail.com">email</a></li>
-        		<li><a href="https://github.com/jstraceski">github.com/jstraceski</a></li>
-			</ul>
-		</footer>
+	<body class="bg">
+		<img class="center" src="./EA logo 500.png">
+		
+		<hr>
+		
+		<h1 class="center">SCHOOLED<h1>
+		<h2 class="center">A Game of Life<h2> 
+		<img class="center" src="./Sleeping_With_Pillow.png">
+		<img class="center-size" src="./location1.png">
+		<img class="center-size" src="./location2.png">
+		
+		<h3 class="center">In Development</h3> 
+		<h3 class="center"> <a href="https://github.com/jstraceski/Schooled-Public" >Github</a> </h3>
+		<br>
+		<br>
+		<br>
+		
+		<div class="navbar">
+			<a href="./index.html" class="active">Home</a>
+			<a href="./about.html">About</a>
+			<a href="mailto:straceski.joseph@gmail.com">Email</a>
+		</div>
+		
 	</body>
+	
+	
 </html>
