--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:straceski.joseph@gmail.com">email</a></li>
+				<li><a href="https://www.linkedin.com/in/joseph-s-559536b2/">linkedin</a></li>
         		<li><a href="https://github.com/jstraceski">github.com/jstraceski</a></li>
 			</ul>
 		</footer>
