--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Joseph Straceski</h1>
+        		<h1 style="vertical-align: center"> <img class="robot" src="./mr_roboto.png" align="center">Joseph Straceski</h1>
 				<p>Programmer, Engineer, Actor</p>
-				<p><a href="./endless-arc/index.html">Endless Arc Company</a></p>
+				<p><a href="./endless_arc/index.html">Endless Arc</a></p>
     		</div>
 		</div>
+		
+
+		
 		<footer>
     		<ul>
         		<li><a href="mailto:straceski.joseph@gmail.com">email</a></li>
+				<li><a href="https://www.linkedin.com/in/joseph-s-559536b2/">linkedin</a></li>
         		<li><a href="https://github.com/jstraceski">github.com/jstraceski</a></li>
 			</ul>
 		</footer>
