Added Basic Website Data

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Joseph Straceski</title>
+		<title>Joseph Straceski - About</title>
 		<link rel="stylesheet" type="text/css" href="./css/main.css">
 	</head>
 	<body>
@@ -13,14 +13,13 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1 style="vertical-align: center"> <img class="robot" src="./mr_roboto.png" align="center">Joseph Straceski</h1>
-				<p>Programmer, Engineer, Actor</p>
-				<p><a href="./endless_arc/index.html">Endless Arc</a></p>
-    		</div>
+        		<h1>About Joseph Straceski</h1>
+				<p><b>Holistic programmer with interests in physics, graphical processing, and game programming.</b></p>
+				<p>My work experiance includes 3D printer slicer development at Desktop Metal, embeded systems programming at QinetiQ-NA, and virus remediation and techincal support at Northeastern University's ResNet. </p> 
+				<p>When I'm not working on programming I'm usually preforming in musical theater shows as a part of the NUStage musical theater company.</p>
+				<p2>Check out my links below for more info.</p2>
+			</div>
 		</div>
-		
-
-		
 		<footer>
     		<ul>
         		<li><a href="mailto:straceski.joseph@gmail.com">email</a></li>
