--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         		<h1>About Joseph Straceski</h1>
 				<p><b>Holistic programmer with interests in physics, graphical processing, and game programming.</b></p>
 				<p>My work experiance includes 3D printer slicer development at Desktop Metal, embeded systems programming at QinetiQ-NA, and virus remediation and techincal support at Northeastern University's ResNet. </p> 
-				<p>When I'm not working on programming I'm usually preforming in musical theater shows as a part of the NUStage musical theater company.</p>
+				<p>When I'm not working on programming I'm usually preforming in musicals as a part of the NUStage theater company.</p>
 				<p2>Check out my links below for more info.</p2>
 			</div>
 		</div>
