--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     		<div class="blurb">
         		<h1>Joseph Straceski</h1>
 				<p>Programmer, Engineer, Actor</p>
-				<p><a href="./endless-arc/index.html">Endless Arc Company</a></p>
+				<p><a href="./endless-arc/index.html">Endless Arc</a></p>
     		</div>
 		</div>
 		<footer>
