--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     		<div class="blurb">
         		<h1 style="vertical-align: center"> <img class="robot" src="./mr_roboto.png" align="center">Joseph Straceski</h1>
 				<p>Programmer, Engineer, Actor</p>
-				<p><a href="./endless_arc/index.html">Endless Arc</a></p>
+				<p><a href="./endless_arc/index.html">Endless Arc Projects</a></p>
+				<p><a href="./game_development/index.html">Game Engine Development Projects</a></p>
     		</div>
 		</div>
-		
 
-		
+
+
 		<footer>
     		<ul>
         		<li><a href="mailto:straceski.joseph@gmail.com">email</a></li>
