--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1 style="vertical-align: center"> <img class="robot" src="./mr_roboto.png" align="center">Joseph Straceski</h1>
+        		<h1 style="vertical-align: center"> <img class="robot" src="./mr_roboto.png" align="right">Joseph Straceski</h1>
 				<p>Programmer, Engineer, Actor</p>
 				<p><a href="./endless_arc/index.html">Endless Arc Projects</a></p>
 				<p><a href="./game_development/index.html">Game Engine Development Projects</a></p>
