--- a/game_development/index.html
+++ b/game_development/index.html
@@ -7,12 +7,12 @@
 	<body>
 		<h1>Projects</h1>
 		<div id="NE">
-			<h2><a href="./Untitled/index.html">A2 - Untitled Game Engine no.5</a></h2>
+			<h2><a href="./Untitled/index.html" class="border" >A2 - Untitled Game Engine no.5</a></h2>
 			<img class="icon" src="./Untitled/Game.png" align="right">
 		</div>
 
 		<div id="NW">
-			<h2><a href="./BreakJoe/index.html">A1 - BreakJoe</a></h2>
+			<h2><a href="./BreakJoe/index.html" class="border">A1 - BreakJoe</a></h2>
 			<img class="icon" src="./BreakJoe/BreakJoe1.png" align="right">
 		</div>
 	</body>
