--- a/game_development/BreakJoe/index.html
+++ b/game_development/BreakJoe/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>Joseph Straceski - Game Engine Development</title>
-		<link rel="stylesheet" type="text/css" href="./css/main.css">
+		<link rel="stylesheet" type="text/css" href="../../css/main.css">
 	</head>
 	<body>
 
 		<h1 class="center">BreakJoe</h1>
-		<h2 class="center"> <a href="https://youtu.be/iL2QTa0Ctq0" >Demo Video</a></h2>
-		<h2 class="center"> <a href="https://github.com/jstraceski/BreakJoe" >Github (With Binary)</a> </h2>
+		<h2 class="center"> <a href="https://youtu.be/iL2QTa0Ctq0">Demo Video</a></h2>
+		<h2 class="center"> <a href="https://github.com/jstraceski/BreakJoe">Github (With Binary)</a> </h2>
 		<img class="screenshot" src="./BreakJoe1.png" align="center">
 		<img class="screenshot" src="./BreakJoe2.png" align="center">
 		<img class="screenshot" src="./BreakJoe3.png" align="center">
