--- a/game_development/index.html
+++ b/game_development/index.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<title>Joseph Straceski - Game Engine Development</title>
-		<link rel="stylesheet" type="text/css" href="./css/main.css">
+		<link rel="stylesheet" type="text/css" href="../css/main.css">
 	</head>
 	<body>
 		<h1>Projects</h1>
 		<div id="NE">
-			<h2><a href="./Untitled/index.html" class="border" >A2 - Untitled Game Engine no.5</a></h2>
+			<h2><a href="./Untitled/index.html" class="border">A2 - Untitled Game Engine no.5</a></h2>
 			<img class="icon" src="./Untitled/Game.png" align="right">
 		</div>
 
@@ -16,6 +16,4 @@
 			<img class="icon" src="./BreakJoe/BreakJoe1.png" align="right">
 		</div>
 	</body>
-
-
 </html>
