--- a/game_development/Untitled/index.html
+++ b/game_development/Untitled/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Game Engine Development</title>
-		<link rel="stylesheet" type="text/css" href="./css/main.css">
+		<link rel="stylesheet" type="text/css" href="../../css/main.css">
 	</head>
 	<body>
 
