--- a/game_development/Final/index.html
+++ b/game_development/Final/index.html
@@ -17,10 +17,13 @@
 		<img class="screenshot" src="./small0.png" align="center">
 		<p>
 			Oh man we have so much to say and not a lot of energy left to say it.
-			This project kicked out collective butt, moreso than a lot of other things in this past year, which is saying something.
-			But this project kicked our butt in a way that made us want to turn around, open up our laptops and research if our but realy wans't meant to be kicked in thr first place.
+			This project kicked out collective butt,
+			moreso than a lot of other things in this past year,
+			which is saying something.
+			But this project kicked our butt in a way that made us want to turn around,
+			open up our laptops and research if our butt really wasn't meant to be kicked in the first place.
 			And then find out that we had been kicking it the whole time.
-			In other words we learned a lot but oh was it slow progress.
+			In other words we learned a lot but it was slow, mostly self inflicted, progress.
 			<br>
 			<br>
 			This project really tested our desire to implement everything,
@@ -29,19 +32,19 @@
 			we just want to use this project as an impetus to learn modern OpenGL.
 			Then we decided why not make it 3D, 2D is just 3D with a few extra D's,
 			and in OpenGL going from one to the other isn't THAT difficult.
-			Then we watched a few conference videos and thought indignantly:
+			Then we watched a few conference videos and has that though that people
+			who are destined for other types of greatness probably have:
 			"why CANT'T we be the next rockstar..."
 			The glare from the gdb terminal and the
-			empty dunkin containers glimmering in our eyes.
+			empty dunkin containers reflecting the tears in our eyes.
 			<br>
 			<br>
 			In all seriousness we taught ourselves how to build a 3D physics engine from scratch.
 			Use some interesting and novel 3D rendering methods to optimize our very small game demo.
 			Try our hand at implementing various parallel processing methods.
-			And come up with an over-complicated texture storage system that actually works really well.
+			And come up with an over-complicated texture storage system, that actually works really well.
 			Hopefully this will produce something beneficial for us in the future.
-			And who knows, we might even make an actual game out of it if we have some free time.
-
+			And who knows, we might even make an actual game out of it if we have any free time in the future.
 		</p>
 		<br>
 
