--- a/game_development/Final/index.html
+++ b/game_development/Final/index.html
@@ -39,12 +39,12 @@
 			empty dunkin containers reflecting the tears in our eyes.
 			<br>
 			<br>
-			In all seriousness we taught ourselves how to build a 3D physics engine from scratch.
-			Use some interesting and novel 3D rendering methods to optimize our very small game demo.
-			Try our hand at implementing various parallel processing methods.
-			And come up with an over-complicated texture storage system, that actually works really well.
+			In all seriousness, we taught ourselves how to build a 3D physics engine from scratch.
+			Learned how to tweak OpenGL in some interesting and novel ways to optimize some aspects of our demo.
+			We tried our hand at implementing various parallel processing methods.
+			And came up with an over-complicated texture storage system, that actually works really well.
 			Hopefully this will produce something beneficial for us in the future.
-			And who knows, we might even make an actual game out of it if we have any free time in the future.
+			And who knows, we might even make an actual game out of it if we have any free time after I go hibernate for an eon or two.
 		</p>
 		<br>
 
