--- a/game_development/Final/index.html
+++ b/game_development/Final/index.html
@@ -17,7 +17,7 @@
 		<img class="screenshot" src="./small0.png" align="center">
 		<p>
 			Oh man we have so much to say and not a lot of energy left to say it.
-			This project kicked out collective butt,
+			This project kicked our collective butt,
 			moreso than a lot of other things in this past year,
 			which is saying something.
 			But this project kicked our butt in a way that made us want to turn around,
@@ -30,9 +30,9 @@
 			and learn about all the systems in the universe.
 			From the beginning we thought to ourselves,
 			we just want to use this project as an impetus to learn modern OpenGL.
-			Then we decided why not make it 3D, 2D is just 3D with a few extra D's,
+			Then, we decided why not make it 3D, 2D is just 3D with a few extra D's,
 			and in OpenGL going from one to the other isn't THAT difficult.
-			Then we watched a few conference videos and has that though that people
+			Then we watched a few conference videos and had that though that people
 			who are destined for other types of greatness probably have:
 			"why CANT'T we be the next rockstar..."
 			The glare from the gdb terminal and the
@@ -40,7 +40,7 @@
 			<br>
 			<br>
 			In all seriousness, we taught ourselves how to build a 3D physics engine from scratch.
-			Learned how to tweak OpenGL in some interesting and novel ways to optimize some aspects of our demo.
+			We learned how to tweak OpenGL in some interesting and novel ways to optimize some aspects of our demo.
 			We tried our hand at implementing various parallel processing methods.
 			And came up with an over-complicated texture storage system, that actually works really well.
 			Hopefully this will produce something beneficial for us in the future.
