Added tech demo video

--- a/endless_arc/index.html
+++ b/endless_arc/index.html
@@ -6,28 +6,34 @@
 	</head>
 	<body class="bg">
 		<img class="center" src="./EA logo 500.png">
-		
+
 		<hr>
-		
-		<h1 class="center">SCHOOLED<h1>
-		<h2 class="center">A Game of Life<h2> 
+
+		<h1 class="center">SCHOOLED</h1>
+		<h2 class="center">A Game of Life</h2>
+		<hr>
+		<h3 class="center">Intro Video and Tech Demo<br><br>
+			<iframe width="1280" height="720"
+	 			src="https://youtu.be/N_APJRaYL9c">
+	 		</iframe>
+		</h3>
 		<img class="center" src="./Sleeping_With_Pillow.png">
 		<img class="center-size" src="./location1.png">
 		<img class="center-size" src="./location2.png">
-		
-		<h3 class="center">In Development</h3> 
+
+		<h3 class="center">In Development</h3>
 		<h3 class="center"> <a href="https://github.com/jstraceski/Schooled-Public" >Github</a> </h3>
 		<br>
 		<br>
 		<br>
-		
+
 		<div class="navbar">
 			<a href="./index.html" class="active">Home</a>
 			<a href="./about.html">About</a>
 			<a href="mailto:straceski.joseph@gmail.com">Email</a>
 		</div>
-		
+
 	</body>
-	
-	
+
+
 </html>
